<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLength="100"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:layout_gravity="start"
        android:visibility="gone"
        android:textSize="17sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginStart="10dp"
            android:textSize="17sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue with Guest"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@color/white"/>

</LinearLayout>