<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/login_title_color"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:layout_margin="7dp"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:maxLength="100"
            android:layout_margin="7dp"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLength="100"
            android:imeOptions="actionNext"
            android:layout_margin="7dp"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:maxLength="100"
            android:imeOptions="actionDone"
            android:layout_margin="7dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:layout_gravity="start"
        android:visibility="gone"/>


    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_an_account"
            android:textSize="17sp"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>