<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_send_email"
        android:textSize="20sp"
        android:layout_margin="15dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/bt_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_reset_password"
        android:textSize="17sp"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/holo_green_light"
            android:textSize="18sp"
            android:textStyle="italic"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        android:textAlignment="center"/>

</LinearLayout>