<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChangePasswordFragment"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center">

    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_gravity="start"
        android:visibility="gone"
        android:textSize="17sp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/bt_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/teal_200"/>

    <TextView
        android:id="@+id/tv_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

</LinearLayout>